# hovernet_modified

./: env_name.txt  hello.py  pyproject.toml  run_infer.ipynb  run_infer.py  run_infer.sh
infer/: tile.py
misc/: utils.py
