[project]
name = "hover-net"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "docopt==0.6.2",
    "future==0.18.2",
    "imgaug==0.4.0",
    "jupyter>=1.1.1",
    "matplotlib==3.3.0",
    "numpy==1.19.1",
    "opencv-python==4.3.0.36",
    "openslide-python>=1.3.1",
    "pandas==1.1.0",
    "pillow==7.2.0",
    "psutil==5.7.3",
    "scikit-image==0.17.2",
    "scikit-learn==0.23.1",
    "scipy==1.5.2",
    "tensorboard==2.3.0",
    "tensorboardx==2.1",
    "termcolor==1.1.0",
    "torch==1.6.0",
    "torchvision==0.7.0",
    "tqdm==4.48.0",
]
